--- a/rayna.html
+++ b/rayna.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Congratulations Bayu! 🎓</title>
+    <title>Congratulations Rayna! 🎓</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
@@ -14,7 +14,7 @@
 
       /* Background Image - GANTI DI SINI */
       .bg-custom {
-        background-image: url("/assets/bg/bayu.jpg");
+        background-image: url("/assets/bg/rayna.jpg");
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -30,8 +30,8 @@
       .overlay {
         background: linear-gradient(
           135deg,
-          rgba(31, 152, 73, 0.9) 0%,
-          rgba(6, 74, 7, 0.8) 80%
+          rgba(105, 84, 20, 0.9) 0%,
+          rgba(69, 42, 1, 0.8) 80%
         );
       }
 
@@ -119,7 +119,7 @@
         position: fixed;
         width: 10px;
         height: 10px;
-        background: #035413;
+        background: #955b0a;
         animation: confetti-fall 3s linear infinite;
         z-index: 10;
       }
@@ -206,39 +206,39 @@
       <!-- Confetti Elements -->
       <div
         class="confetti"
-        style="left: 10%; animation-delay: 0s; background: #96ff96"
+        style="left: 10%; animation-delay: 0s; background: #6b5d0b"
       ></div>
       <div
         class="confetti"
-        style="left: 20%; animation-delay: 0.5s; background: #15f969"
+        style="left: 20%; animation-delay: 0.5s; background: #5e3204"
       ></div>
       <div
         class="confetti"
-        style="left: 30%; animation-delay: 1s; background: #3ec86c"
+        style="left: 30%; animation-delay: 1s; background: #583e03"
       ></div>
       <div
         class="confetti"
-        style="left: 40%; animation-delay: 1.5s; background: #139320"
+        style="left: 40%; animation-delay: 1.5s; background: #4f2d04"
       ></div>
       <div
         class="confetti"
-        style="left: 50%; animation-delay: 2s; background: #3ace49"
+        style="left: 50%; animation-delay: 2s; background: #b99816"
       ></div>
       <div
         class="confetti"
-        style="left: 60%; animation-delay: 0.3s; background: #4eb562"
+        style="left: 60%; animation-delay: 0.3s; background: #5f4003"
       ></div>
       <div
         class="confetti"
-        style="left: 70%; animation-delay: 0.8s; background: #22bb1f"
+        style="left: 70%; animation-delay: 0.8s; background: #564703"
       ></div>
       <div
         class="confetti"
-        style="left: 80%; animation-delay: 1.3s; background: #2cbe5b"
+        style="left: 80%; animation-delay: 1.3s; background: #563a07"
       ></div>
       <div
         class="confetti"
-        style="left: 90%; animation-delay: 1.8s; background: #2d7a33"
+        style="left: 90%; animation-delay: 1.8s; background: #ff9f21"
       ></div>
 
       <!-- Main Container -->
@@ -256,7 +256,7 @@
           <div
             class="text-responsive-2xl font-semibold text-white/90 drop-shadow-md px-4"
           >
-            ✨ Mas Bayu ✨
+            ✨ Wo Na✨
           </div>
         </div>
 
@@ -267,7 +267,7 @@
           <!-- Main Photo - GANTI FOTO DI SINI -->
           <div class="photo-frame rounded-2xl overflow-hidden">
             <img
-              src="/assets/photos/bayu.jpg"
+              src="/assets/photos/rayna.jpg"
               alt="Bayu Graduation Photo"
               class="w-48 h-48 sm:w-56 sm:h-56 md:w-64 md:h-64 lg:w-72 lg:h-72 object-cover"
               id="mainPhoto"
@@ -282,18 +282,18 @@
           >
             <div class="text-center">
               <h2
-                class="text-lg sm:text-xl lg:text-2xl font-bold text-green-800 mb-3 sm:mb-4"
+                class="text-lg sm:text-xl lg:text-2xl font-bold text-black-800 mb-3 sm:mb-4"
               >
                 🌟 Happy graduation!
               </h2>
               <p
-                class="text-sm sm:text-base text-green-700 leading-relaxed mb-3 sm:mb-4 px-2"
+                class="text-sm sm:text-base text-brown-700 leading-relaxed mb-3 sm:mb-4 px-2"
               >
                 Yeay, congrats guys atas kelulusannya! Semoga masuk SMA impian
                 ya! 🎉
               </p>
               <p
-                class="text-sm sm:text-base text-green-700 leading-relaxed mb-3 sm:mb-4 px-2"
+                class="text-sm sm:text-base text-brown-700 leading-relaxed mb-3 sm:mb-4 px-2"
               >
                 jangan lupa bahwa perjalanan baru dimulai so keep grinding dan
                 jangan pernah cape buat upgrade diri ya guys! Keep shining!
