--- a/jamilia.html
+++ b/jamilia.html
@@ -178,25 +178,54 @@
       /* Responsive text sizes */
       @media (max-width: 640px) {
         .text-responsive-6xl {
-          font-size: 3rem;
+          font-size: 2.5rem;
+          line-height: 1.1;
         }
         .text-responsive-4xl {
-          font-size: 2rem;
+          font-size: 1.75rem;
+          line-height: 1.2;
         }
         .text-responsive-2xl {
-          font-size: 1.5rem;
+          font-size: 1.25rem;
+          line-height: 1.3;
         }
       }
 
       @media (max-width: 480px) {
         .text-responsive-6xl {
-          font-size: 2.5rem;
+          font-size: 2rem;
+          line-height: 1.1;
         }
         .text-responsive-4xl {
-          font-size: 1.75rem;
+          font-size: 1.5rem;
+          line-height: 1.2;
         }
         .text-responsive-2xl {
-          font-size: 1.25rem;
+          font-size: 1.125rem;
+          line-height: 1.3;
+        }
+      }
+
+      /* Mobile specific adjustments */
+      @media (max-width: 640px) {
+        .mobile-padding {
+          padding-left: 1rem;
+          padding-right: 1rem;
+        }
+
+        .mobile-spacing {
+          margin-bottom: 1rem;
+        }
+
+        .mobile-photo {
+          width: 200px;
+          height: 200px;
+        }
+
+        .mobile-message {
+          margin-left: 0.5rem;
+          margin-right: 0.5rem;
+          padding: 1rem;
         }
       }
     </style>
